added login partly

--- a/src/firstapp/basictemplating.html
+++ b/src/firstapp/basictemplating.html
@@ -1,2 +1,14 @@
-<h1>{{ .Title }}</h1>
-<p>{{ .News }}</p>
+<!DOCTYPE html>
+<html>
+    <head>
+
+    </head>
+    <body>
+        <h1>{{ .Title }}</h1>
+        <p>{{ .News }}</p>
+        <form>
+            <input type="text"/>
+        </form>
+    </body>
+    
+</html>
